--- a/inabie/package.json
+++ b/inabie/package.json
@@ -30,6 +30,9 @@
         "bootstrap": "^4.1.3",
         "cordova-android": "7.0.0",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-document-viewer": "^0.9.10",
+        "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,7 +57,9 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-document-viewer": {}
         },
         "platforms": [
             "android"
