--- a/inabie/package.json
+++ b/inabie/package.json
@@ -38,9 +38,12 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "font-awesome": "^4.7.0",
+        "intl": "^1.2.5",
         "ionic-angular": "3.9.2",
+        "ionic2-calendar": "^0.4.5",
         "ionicons": "3.0.0",
         "jquery": "^3.3.1",
+        "moment": "^2.22.2",
         "polyfills": "^2.1.1",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
