--- a/inabie/package.json
+++ b/inabie/package.json
@@ -24,8 +24,10 @@
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/core": "~4.11.0",
+        "@ionic-native/geolocation": "^4.14.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/status-bar": "~4.11.0",
+        "@ionic-native/text-to-speech": "^4.14.0",
         "@ionic/storage": "2.1.3",
         "bootstrap": "^4.1.3",
         "cordova-android": "7.0.0",
@@ -33,10 +35,13 @@
         "cordova-plugin-document-viewer": "^0.9.10",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
+        "cordova-plugin-geolocation": "^4.0.1",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-tts": "^0.2.3",
         "cordova-plugin-whitelist": "^1.3.3",
+        "enhanced-resolve": "^3.3.0",
         "font-awesome": "^4.7.0",
         "intl": "^1.2.5",
         "ionic-angular": "3.9.2",
@@ -62,7 +67,9 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-document-viewer": {}
+            "cordova-plugin-document-viewer": {},
+            "cordova-plugin-tts": {},
+            "cordova-plugin-geolocation": {}
         },
         "platforms": [
             "android"
