--- a/inabie/package.json
+++ b/inabie/package.json
@@ -23,8 +23,9 @@
         "@angular/http": "5.2.11",
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
-        "@ionic-native/core": "~4.11.0",
+        "@ionic-native/core": "^4.14.0",
         "@ionic-native/geolocation": "^4.14.0",
+        "@ionic-native/google-maps": "^4.14.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic-native/text-to-speech": "^4.14.0",
@@ -36,6 +37,7 @@
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-geolocation": "^4.0.1",
+        "cordova-plugin-googlemaps": "^2.4.4",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.0",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -56,6 +58,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.11",
+        "@ionic/lab": "1.0.9",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
@@ -69,7 +72,12 @@
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-document-viewer": {},
             "cordova-plugin-tts": {},
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "AIzaSyByhCpgbCBzcjN6RsSz5QcTG-LipeDPTrA",
+                "PLAY_SERVICES_VERSION": "15.0.1",
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            }
         },
         "platforms": [
             "android"
